discussion/kv_engine/147944/147944_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor]: Use folly::AsyncServerSocket for ServerSockets

Replace the old ServerSocket class with a new implementaion
which utilize folly::AsyncServerSocket

Change-Id: I520defc1deb345cb3c0fb3980e406f4781e34b32

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 17:18:27.000000000
Message: 
Uploaded patch set 21: Patch Set 20 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 19:48:20.000000000
Message: 
Patch Set 21: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36810/ : FAILURE

Timeout of a CTest test 301/407 Test #301: memcached_testapp.default.TracingTest .........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36810/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9826/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9826/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9826/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11823/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11823/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8415/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31450/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11397/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19410/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
